==> vrain-solution/phoenixeye-edge-anybusTest/host-application-example-code-(for-compactcom-30-and-40-series)/Projects/nucleo-h743zi2_m00765_cubeide/abcc_adapt/abcc_sys_adapt.c <==
#include "abcc.h"
#include "abcc_sys_adapt_spi.h"
#include "abcc_sys_adapt_ser.h"
#include <stm32h7xx_hal.h>
#include "abcc_sys_adapt_aux.h"
#include "main.h"
#define M00765_U8_I2C_ADDRESS                      ( 0x4e )
#define M00765_U9_I2C_ADDRESS                      ( 0x4c )
#define NUM_BYTES_2_WORDS(x) ( ( (x) + 1 ) >> 1 )
#define CRC_WORD_LEN_IN_WORDS 2
#define MAX_PAYLOAD_WORD_LEN ( ( NUM_BYTES_2_WORDS( ABCC_CFG_SPI_MSG_FRAG_LEN ) ) + ( NUM_BYTES_2_WORDS( ABCC_CFG_MAX_PROCESS_DATA_SIZE ) ) + ( CRC_WORD_LEN_IN_WORDS ) )
#define SER_CMD_STAT_REG_LEN                       ( ABP_UINT8_SIZEOF )
#define SER_MSG_FRAG_LEN                           ( 16 * ABP_UINT8_SIZEOF )
   #define SER_MAX_PD_LEN                          ( ABP_MAX_PROCESS_DATA )
   #define SER_MAX_PD_LEN                          ABCC_CFG_MAX_PROCESS_DATA_SIZE
#define SER_CRC_LEN                                ( ABP_UINT16_SIZEOF )

BOOL ABCC_SYS_HwInit( void )
{
   HAL_StatusTypeDef    xHalStatus;
   UINT8                abBuffer[ 2 ];

   if( pxI2C_Handle == NULL )
   {
      /* No I2C interface handle registered, this should not happen! */
      ABCC_ERROR( ABCC_SEV_FATAL, ABCC_EC_NO_RESOURCES, 0 );
      return( FALSE );
   }

   /*
   ** Reset the I2C IO expanders to 'all inputs'. Check the datasheet for the
   ** NXP PCF8575 I/O expander for more information.
   */
   abBuffer[ 0 ] = 0xFF;
   abBuffer[ 1 ] = 0xFF;

   xHalStatus = HAL_I2C_Master_Transmit( pxI2C_Handle, M00765_U8_I2C_ADDRESS, abBuffer, 2, 1000 );
   if( xHalStatus != HAL_OK )
   {
      ABCC_ERROR( ABCC_SEV_WARNING, ABCC_EC_SYS_ADAPTION_ERR, (UINT32)xHalStatus );
      return( FALSE );
   }

   xHalStatus = HAL_I2C_Master_Transmit( pxI2C_Handle, M00765_U9_I2C_ADDRESS, abBuffer, 2, 1000 );
   if( xHalStatus != HAL_OK )
   {
      ABCC_ERROR( ABCC_SEV_WARNING, ABCC_EC_SYS_ADAPTION_ERR, (UINT32)xHalStatus );
      return( FALSE );
   }

   /*
   ** Refresh the I2C inputs so that MD and MI contains up-to-date values.
   */
   if( !ABCC_SYS_Refresh_I2C_In() )
   {
      ABCC_ERROR( ABCC_SEV_WARNING, ABCC_EC_SYS_ADAPTION_ERR, 0 );
      return( FALSE );
   }

   return( TRUE );
}

void ABCC_SYS_SetOpmode( UINT8 bOpmode )
{
   HAL_StatusTypeDef    xHalStatus;

   /*
   ** Step 1, update the OM pins on the ABCC.
   */

   if( ( bOpmode & 0x1 ) != 0 )
   {
      HAL_GPIO_WritePin( M00765_OM0_GPIO_Port, M00765_OM0_Pin, GPIO_PIN_SET );
   }
   else
   {
      HAL_GPIO_WritePin( M00765_OM0_GPIO_Port, M00765_OM0_Pin, GPIO_PIN_RESET );
   }

   if( ( bOpmode & 0x2 ) != 0 )
   {
      HAL_GPIO_WritePin( M00765_OM1_GPIO_Port, M00765_OM1_Pin, GPIO_PIN_SET );
   }
   else
   {
      HAL_GPIO_WritePin( M00765_OM1_GPIO_Port, M00765_OM1_Pin, GPIO_PIN_RESET );
   }

   if( ( bOpmode & 0x4 ) != 0 )
   {
      HAL_GPIO_WritePin( M00765_OM2_GPIO_Port, M00765_OM2_Pin, GPIO_PIN_SET );
   }
   else
   {
      HAL_GPIO_WritePin( M00765_OM2_GPIO_Port, M00765_OM2_Pin, GPIO_PIN_RESET );
   }

   if( ( bOpmode & 0x8 ) != 0 ) {
      HAL_GPIO_WritePin( M00765_OM3_GPIO_Port, M00765_OM3_Pin, GPIO_PIN_SET );
   }
   else
   {
      HAL_GPIO_WritePin( M00765_OM3_GPIO_Port, M00765_OM3_Pin, GPIO_PIN_RESET );
   }

   /*
   ** Step 2, any other OpMode-dependent initialisations that are needed.
   */

   switch( bOpmode )
   {
#if( ABCC_CFG_DRV_SPI )
   case ABP_OP_MODE_SPI:

      /* Is any handle registered for the HW interface in question? */
      if( pxSPI_Handle == NULL )
      {
         /* No SPI interface handle registered, this should not happen! */
         ABCC_ERROR( ABCC_SEV_FATAL, ABCC_EC_NO_RESOURCES, 0 );
         return;
      }

      /* Update any interface-dependent settings that depends on the OpMode. */

      /* Re-initialise the interface HW with the new settings. */

   break;
#endif
#if( ABCC_CFG_DRV_SERIAL )
   case ABP_OP_MODE_SERIAL_19_2:
   case ABP_OP_MODE_SERIAL_57_6:
   case ABP_OP_MODE_SERIAL_115_2:
   case ABP_OP_MODE_SERIAL_625:

      /* Is any handle registered for the HW interface in question? */
      if( pxUART_Handle == NULL )
      {
         /* No UART interface handle registered, this should not happen! */
         ABCC_ERROR( ABCC_SEV_FATAL, ABCC_EC_NO_RESOURCES, 0 );
         return;
      }

      /* Update any interface-dependent settings that depends on the OpMode. */
      switch( bOpmode )
      {
      case ABP_OP_MODE_SERIAL_19_2:
         pxUART_Handle->Init.BaudRate = 19200;
         break;
      case ABP_OP_MODE_SERIAL_57_6:
         pxUART_Handle->Init.BaudRate = 57600;
         break;
      case ABP_OP_MODE_SERIAL_115_2:
         pxUART_Handle->Init.BaudRate = 115200;
         break;
      case ABP_OP_MODE_SERIAL_625:
         pxUART_Handle->Init.BaudRate = 625000;
         break;
      default:
         ABCC_ERROR( ABCC_SEV_FATAL, ABCC_EC_INCORRECT_OPERATING_MODE, 0 );
         break;
      }

      /* Re-initialise the interface HW with the new settings. */
      xHalStatus = HAL_UART_Init( pxUART_Handle );
      if( xHalStatus != HAL_OK )
      {
         ABCC_ERROR( ABCC_SEV_WARNING, ABCC_EC_SYS_ADAPTION_ERR, (UINT32)xHalStatus );
         return;
      }

      break;
#endif
   default:
      ABCC_ERROR( ABCC_SEV_FATAL, ABCC_EC_INCORRECT_OPERATING_MODE, 0 );
      break;
   }

   return;
}

void ABCC_SYS_HWReset( void )
{
   HAL_GPIO_WritePin( M00765_RESET_GPIO_Port, M00765_RESET_Pin, GPIO_PIN_RESET );
}

void ABCC_SYS_HWReleaseReset( void )
{
   HAL_GPIO_WritePin( M00765_RESET_GPIO_Port, M00765_RESET_Pin, GPIO_PIN_SET );
}

UINT8 ABCC_SYS_ReadModuleId( void )
{
   return( sI2C_Inputs.bMI );
}

BOOL ABCC_SYS_ModuleDetect( void )
{
   if( sI2C_Inputs.bMD == 0 )
   {
      return( TRUE );
   }

   return( FALSE );
}

void ABCC_SYS_SpiSendReceive( void* pxSendDataBuffer, void* pxReceiveDataBuffer, UINT16 iLength )
{
   HAL_StatusTypeDef    xHalStatus;

   if( pxSPI_Handle == NULL )
   {
      /* No SPI interface handle registered, this should not happen! */
      ABCC_ERROR( ABCC_SEV_FATAL, ABCC_EC_NO_RESOURCES, 0 );
      return;
   }

   /* Save the destination pointer and size for later. */
   pxInboundDest = pxReceiveDataBuffer;
   iInboundSize = iLength;

   /* Activate SS, i.e. set it low. */
   /* TODO - The SPI interface should have some kind of logic to directly    */
   /* TODO - control the SS signal, investigate if this can be used instead. */
   HAL_GPIO_WritePin( M00765_SPI_SS_GPIO_Port, M00765_SPI_SS_Pin, GPIO_PIN_RESET );

   /* Copy the MOSI data from the driver buffer (DTCM-RAM) to the I/O buffer (SRAMx). */
   memcpy( abSpiMosiDmaBuff, pxSendDataBuffer, iLength );

   /* Start the SPI transfer. */
   xHalStatus = HAL_SPI_TransmitReceive_DMA( pxSPI_Handle, abSpiMosiDmaBuff, abSpiMisoDmaBuff, iLength );
   if( xHalStatus != HAL_OK )
   {
      /* SPI transfer could not be started. */
      ABCC_ERROR( ABCC_SEV_WARNING, ABCC_EC_SYS_ADAPTION_ERR, (UINT32)xHalStatus );

      /* Deactivate SS, i.e. set it high. */
      HAL_GPIO_WritePin( M00765_SPI_SS_GPIO_Port, M00765_SPI_SS_Pin, GPIO_PIN_SET );
   }

   return;
}

void ABCC_SYS_SerSendReceive( void* pxTxDataBuffer, void* pxRxDataBuffer, UINT16 iTxSize, UINT16 iRxSize )
{
   HAL_StatusTypeDef    xHalStatus;

   if( pxUART_Handle == NULL )
   {
      /* No UART interface handle registered, this should not happen! */
      ABCC_ERROR( ABCC_SEV_FATAL, ABCC_EC_NO_RESOURCES, 0 );
      return;
   }

   /* Save the destination pointer and size for later. */
   pxInboundDest = pxRxDataBuffer;
   iInboundSize = iRxSize;

   /* Copy the TX data from the driver buffer (DTCM-RAM) to the I/O buffer (SRAMx). */
   memcpy( abUartTxDmaBuff, pxTxDataBuffer, iTxSize );

   /* Start the UART transmission. */
   xHalStatus = HAL_UART_Transmit_DMA( pxUART_Handle, abUartTxDmaBuff, iTxSize );
   if( xHalStatus != HAL_OK )
   {
      /* UART transmit could not be executed. */
      ABCC_ERROR( ABCC_SEV_WARNING, ABCC_EC_SYS_ADAPTION_ERR, (UINT32)xHalStatus );
      return;
   }

   /* Start the UART reception. */
   xHalStatus = HAL_UART_Receive_DMA( pxUART_Handle, abUartRxDmaBuff, iRxSize );
   if( xHalStatus != HAL_OK )
   {
      /* UART transmit could not be executed. */
      ABCC_ERROR( ABCC_SEV_WARNING, ABCC_EC_SYS_ADAPTION_ERR, (UINT32)xHalStatus );
      return;
   }

   return;
}
